; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_dvbsky.c_dvbsky_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/usb/dvb-usb-v2/extr_dvbsky.c_dvbsky_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_usb_device = type { i32 }
%struct.dvbsky_state = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_usb_device*)* @dvbsky_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dvbsky_init(%struct.dvb_usb_device* %0) #0 {
  %2 = alloca %struct.dvb_usb_device*, align 8
  %3 = alloca %struct.dvbsky_state*, align 8
  store %struct.dvb_usb_device* %0, %struct.dvb_usb_device** %2, align 8
  %4 = load %struct.dvb_usb_device*, %struct.dvb_usb_device** %2, align 8
  %5 = call %struct.dvbsky_state* @d_to_priv(%struct.dvb_usb_device* %4)
  store %struct.dvbsky_state* %5, %struct.dvbsky_state** %3, align 8
  %6 = load %struct.dvbsky_state*, %struct.dvbsky_state** %3, align 8
  %7 = getelementptr inbounds %struct.dvbsky_state, %struct.dvbsky_state* %6, i32 0, i32 1
  %8 = call i32 @mutex_init(i32* %7)
  %9 = load %struct.dvbsky_state*, %struct.dvbsky_state** %3, align 8
  %10 = getelementptr inbounds %struct.dvbsky_state, %struct.dvbsky_state* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret i32 0
}

declare dso_local %struct.dvbsky_state* @d_to_priv(%struct.dvb_usb_device*) #1

declare dso_local i32 @mutex_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
